--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="jumbotron">
             <h1>GeoPicker</h1>
             <p>Sometimes the default geocode isn't good enough. This utility allows you to fine tune the latitude/longitude fields after your geocode independent of the address. Try it by typing in an address, then moving the marker after it zooms to it.</p>
+            <p><iframe src="http://ghbtns.com/github-btn.html?user=timwis&repo=geopicker&type=fork" allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe></p>
         </div>
     
         <div class="row">
